# ai-engineering-company-project-monorepo

./: -R | grep briefing  .CONTEXT.md.swp  .env.example  .gitignore  AGENTS.md  CONTEXT-company.md  CONTEXT.md  Dockerfile  README.md  agent.py  docker-compose.yml  package-lock.json  products.csv  pyproject.toml  pytest_output.txt  requirements.txt  test_results.txt  users.csv
.github/workflows/: brasaland-weekly-pipeline.yml
api/: app.py
data/pipelines/: PIPELINE_DESIGN.md  job_runs.py  job_runs.sql  last_run.json  pipeline.py  schedule.py
data/raw/: TESTING.md
docs/screenshots/: async-tasks-dlq.csv  async-tasks-evidence-ids.txt  async-tasks-evidence.html  async-tasks-flower-tasks.json  async-tasks-retry-log.txt  async-tasks-submission.md  pipeline-job-evidence.md  telemetry-batch-200.json  telemetry-network-proof.html  weekly-location-performance-sample.csv
docs/telemetry/: event-schemas.json  telemetry-plan.md
scripts/: analyze.py  demo_processing_lock.py  incidents-COMPANY-100.csv  incidents-COMPANY.csv  run_pipeline_job.py  run_scheduled_pipeline.py  serve_pipeline_schedule.py
services/: .dockerignore  Dockerfile  README.md  __init__.py  celery_app.py  dead_letter.py  task_status.py  tasks.py
services/api/: .env.example  .gitignore  Dockerfile  README.md  analyzer.py  app.py  auth.py  auth_store.py  config.py  constants.py  database.py  health.py  (+16 more)
tests/: test_async_api_endpoints.py  test_auth_api.py  test_backend_api.py  test_celery_async.py  test_error_handling.py  test_frontend_route_protection.py  test_users_api.py
uis/: Dockerfile  start.sh
(+67 files in other folders)
