[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineering-company-project-monorepo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "openai>=1.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "tinydb>=4.8.2",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
seed = "services.api.seed:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]
